unpackaged/main/default/objects/Proprietary_Account__c/Proprietary_Account__c.object-meta.xml
<CustomObject>
    <label>Proprietary Account</label>
    <nameField>
        <label>Proprietary Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proprietary Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>