unpackaged/main/default/objects/Proprietary_Account__c/fields/Also_No__c.field-meta.xml
<CustomField>
    <fullName>Also_No__c</fullName>
    <label>Also #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>