unpackaged/main/default/objects/Proprietary_Account__c/fields/Attention_To__c.field-meta.xml
<CustomField>
    <fullName>Attention_To__c</fullName>
    <label>Attention To:</label>
    <length>40</length>
    <type>Text</type>
</CustomField>