unpackaged/main/default/objects/Proprietary_Account__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Default Billing Account used for automated processes or not defined</inlineHelpText>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>