unpackaged/main/default/objects/Proprietary_Account__c/fields/Composite_Heading__c.field-meta.xml
<CustomField>
    <fullName>Composite_Heading__c</fullName>
    <label>Composite Heading</label>
    <length>11</length>
    <type>Text</type>
</CustomField>