unpackaged/main/default/objects/Proprietary_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>