unpackaged/main/default/objects/Proprietary_Account__c/fields/Disconnect_Date__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Date__c</fullName>
    <label>Disconnect Date</label>
    <type>Date</type>
</CustomField>