unpackaged/main/default/objects/Proprietary_Account__c/fields/Disconnect_Details__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Details__c</fullName>
    <label>Disconnect Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disconnect_Reason2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Details</valueSetName>
    </valueSet>
</CustomField>