unpackaged/main/default/objects/Proprietary_Account__c/fields/FedEx_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FedEx_Account_Number__c</fullName>
    <label>FedEx Account Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>