unpackaged/main/default/objects/Proprietary_Account__c/fields/Financial_Statement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Statement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Accounts (Financial Statement Contact)</relationshipLabel>
    <relationshipName>Proprietary_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>