unpackaged/main/default/objects/Proprietary_Account__c/fields/Group_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Member_Number__c</fullName>
    <formula>Group_Number__c &amp; &quot;-&quot; &amp;   Member_Number_Code__c</formula>
    <label>Group Member Number</label>
    <type>Text</type>
</CustomField>