unpackaged/main/default/objects/Proprietary_Account__c/fields/Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Number__c</fullName>
    <formula>Proprietary_Group__r.Group_Number__c</formula>
    <label>Group Number</label>
    <type>Text</type>
</CustomField>