unpackaged/main/default/objects/Proprietary_Account__c/fields/Group_Owner__c.field-meta.xml
<CustomField>
    <fullName>Group_Owner__c</fullName>
    <formula>Owner_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Owner</label>
    <type>Text</type>
</CustomField>