unpackaged/main/default/objects/Proprietary_Account__c/fields/Hold_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_End_Date__c</fullName>
    <inlineHelpText>Date Membership Suspension ends</inlineHelpText>
    <label>Hold End Date</label>
    <type>Date</type>
</CustomField>