unpackaged/main/default/objects/Proprietary_Account__c/fields/Hold_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Start_Date__c</fullName>
    <inlineHelpText>Date the membership will be put on hold.</inlineHelpText>
    <label>Hold Start Date</label>
    <type>Date</type>
</CustomField>