unpackaged/main/default/objects/Proprietary_Account__c/fields/Local_Admin__c.field-meta.xml
<CustomField>
    <fullName>Local_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Admin</label>
    <type>Checkbox</type>
</CustomField>