unpackaged/main/default/objects/Proprietary_Account__c/fields/Local_Admin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Local_Admin_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Admin Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Accounts (Local Admin Contact)</relationshipLabel>
    <relationshipName>Proprietary_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>