unpackaged/main/default/objects/Proprietary_Account__c/fields/Manufacturer_Code__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Code__c</fullName>
    <label>Manufacturer Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>