unpackaged/main/default/objects/Proprietary_Account__c/fields/Mega_Book_Heading__c.field-meta.xml
<CustomField>
    <fullName>Mega_Book_Heading__c</fullName>
    <label>Mega Book Heading</label>
    <length>25</length>
    <type>Text</type>
</CustomField>