unpackaged/main/default/objects/Proprietary_Account__c/fields/Mega_Group_Feeder__c.field-meta.xml
<CustomField>
    <fullName>Mega_Group_Feeder__c</fullName>
    <formula>Proprietary_Group__r.Mega_Group_Feeder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mega Group Feeder</label>
    <type>Checkbox</type>
</CustomField>