unpackaged/main/default/objects/Proprietary_Account__c/fields/Member_Number_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Number_2_Code__c</fullName>
    <formula>VALUE(Member_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Number 2 (Code)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>