unpackaged/main/default/objects/Proprietary_Account__c/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <label>Member Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>