unpackaged/main/default/objects/Proprietary_Account__c/fields/Member_Number_Code__c.field-meta.xml
<CustomField>
    <fullName>Member_Number_Code__c</fullName>
    <formula>LPAD(Member_Number__c  ,2,&#39;0&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Number (Code)</label>
    <type>Text</type>
</CustomField>