unpackaged/main/default/objects/Proprietary_Account__c/fields/Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Phone__c</fullName>
    <label>Member Phone</label>
    <type>Phone</type>
</CustomField>