unpackaged/main/default/objects/Proprietary_Account__c/fields/On_Hold_Initiated__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set by automation when the on hold process is initiated. This field kicks off the time-based flow that will update the group member status and suspend their billing products</description>
    <label>On Hold Initiated</label>
    <type>Checkbox</type>
</CustomField>