unpackaged/main/default/objects/Proprietary_Account__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>