unpackaged/main/default/objects/Proprietary_Account__c/fields/Originating_Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Originating_Client_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originating Client Case</label>
    <referenceTo>Client_Support_Ticket__c</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>