unpackaged/main/default/objects/Proprietary_Account__c/fields/Phone_Extension__c.field-meta.xml
<CustomField>
    <fullName>Phone_Extension__c</fullName>
    <label>Phone Extension</label>
    <length>6</length>
    <type>Text</type>
</CustomField>