unpackaged/main/default/objects/Proprietary_Account__c/fields/Production_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Production_Record_Created__c</fullName>
    <label>Production Record Created</label>
    <type>Date</type>
</CustomField>