unpackaged/main/default/objects/Proprietary_Account__c/fields/Proprietary_Account_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Account_ID_18__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proprietary Account ID (18)</label>
    <type>Text</type>
</CustomField>