unpackaged/main/default/objects/Proprietary_Account__c/fields/Proprietary_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Group__c</fullName>
    <label>Proprietary Group</label>
    <referenceTo>Proprietary_Group__c</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>