unpackaged/main/default/objects/Proprietary_Account__c/fields/Reinstatement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Reinstatement_Notes__c</fullName>
    <label>Reinstatement Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>