unpackaged/main/default/objects/Proprietary_Account__c/fields/Shipping_Label__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Label__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Label</label>
    <referenceTo>Shipping_Label__c</referenceTo>
    <relationshipLabel>Proprietary Accounts</relationshipLabel>
    <relationshipName>Proprietary_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>