unpackaged/main/default/objects/Proprietary_Account__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Original Data Access Date</label>
    <type>Date</type>
</CustomField>