unpackaged/main/default/objects/Proprietary_Account__c/fields/Statement_Translation_Type__c.field-meta.xml
<CustomField>
    <fullName>Statement_Translation_Type__c</fullName>
    <label>Statement Translation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Financial_Statement_Type</valueSetName>
    </valueSet>
</CustomField>