unpackaged/main/default/objects/Proprietary_Account__c/fields/Supplement_Contact__c.field-meta.xml
<CustomField>
    <fullName>Supplement_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplement Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Proprietary Accounts (Supplement Contact)</relationshipLabel>
    <relationshipName>Proprietary_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>