unpackaged/main/default/objects/Proprietary_Account__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NCM_Member_Types</valueSetName>
    </valueSet>
</CustomField>