unpackaged/main/default/objects/Proprietary_Account__c/fields/Web_Portal_Consent__c.field-meta.xml
<CustomField>
    <fullName>Web_Portal_Consent__c</fullName>
    <label>Web Portal Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Web_Portal_Consent</valueSetName>
    </valueSet>
</CustomField>