unpackaged/main/default/objects/Proprietary_Account__c/fields/WinM_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>WinM_Group_Number__c</fullName>
    <label>WinM Group Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>