unpackaged/main/default/objects/Proprietary_Account__c/fields/WinM_Member_Number__c.field-meta.xml
<CustomField>
    <fullName>WinM_Member_Number__c</fullName>
    <label>WinM Member Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>