unpackaged/main/default/objects/Proprietary_Account__c/recordTypes/Proprietary_Account.recordType-meta.xml
<RecordType>
    <fullName>Proprietary_Account</fullName>
    <active>true</active>
    <label>Proprietary Account</label>
</RecordType>