unpackaged/main/default/objects/Proprietary_Account__c/validationRules/Production_Member_Number_Lock.validationRule-meta.xml
<ValidationRule>
    <fullName>Production_Member_Number_Lock</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED( Member_Number__c ),
 NOT( ISBLANK( Production_Record_Created__c ) )
)</errorConditionFormula>
    <errorDisplayField>Member_Number__c</errorDisplayField>
    <errorMessage>This can no longer be modified.</errorMessage>
</ValidationRule>