unpackaged/main/default/objects/Proprietary_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Group_Member_Number__c</columns>
    <columns>NAME</columns>
    <columns>Composite_Heading__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>WinM_Member_Number__c</columns>
    <columns>WinMaster_Member_Name__c</columns>
    <columns>Member_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>