unpackaged/main/default/objects/Proprietary_Account__c/listViews/Candidates.listView-meta.xml
<ListView>
    <fullName>Candidates</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Candidate</value>
    </filters>
    <label>Candidates</label>
</ListView>