unpackaged/main/default/objects/Proprietary_Account__c/listViews/Prop_Accounts_that_need_Valid_Accounts.listView-meta.xml
<ListView>
    <fullName>Prop_Accounts_that_need_Valid_Accounts</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Proprietary_Group__c</columns>
    <columns>NAME</columns>
    <columns>Group_Member_Number__c</columns>
    <columns>WinMaster_Member_Name__c</columns>
    <columns>Group_Owner__c</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Winmaster</value>
    </filters>
    <label>Prop Accounts that need Valid Accounts</label>
    <sharedTo>
        <role>Client_Success_Manager</role>
    </sharedTo>
</ListView>